[project]
name = "agent-server"
version = "0.1.0"
description = "MLflow-compatible agent server with FastAPI"
readme = "README.md"
authors = [
    { name = "Agent Developer", email = "bo.cheng@databricks.com" }
]
requires-python = ">=3.11,<=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "litellm<=1.82.6",
    # "databricks-langchain[memory]>=0.17.0",
    "databricks-langchain[memory] @ git+https://git@github.com/databricks/databricks-ai-bridge.git#subdirectory=integrations/langchain",
    "databricks-ai-bridge[agent-server] @ git+https://github.com/databricks/databricks-ai-bridge.git@main",
    "databricks-sdk>=0.79.0",
    "databricks-agents==1.9.3",
    "mlflow>=3.10.0",
    "langgraph>=1.0.9",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
    "ruamel.yaml>=0.18.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pytest>=9.0.2",
]

setup = [
    "ruamel.yaml>=0.18.0",
]

[tool.uv]
default-groups = ["dev", "setup"]
# index-url = "https://pypi-proxy.dev.databricks.com/simple/"

[project.scripts]
quickstart = "scripts.quickstart:main"
start-app = "scripts.start_app:main"
start-server = "agent_server.start_server:main"
agent-evaluate = "agent_server.evaluate_agent:evaluate"
discover-tools = "scripts.discover_tools:main"
preflight = "scripts.preflight:main"
grant-lakebase-permissions = "scripts.grant_lakebase_permissions:main"
